--- a/Breakout/index.html
+++ b/Breakout/index.html
@@ -4,12 +4,17 @@
     <head>
         <title>Breakout</title>
         <meta charset="UTF-8"/>
+        <style>
+            #ball {
+                display: none;
+            }
+        </style>
     </head>
 
     <body>
 
-        <canvas id="gameCanvas" width="800" height="600" style="border: solid 1px;"></canvas>
-      
+        <img id="ball" src="assets/images/ball.png"/>
+        <canvas id="gameCanvas" width="800" height="600" style="border: solid 1px;"></canvas>      
         <script type="module" src="src/main.js"></script>
 
     </body>
