--- a/Breakout/index.html
+++ b/Breakout/index.html
@@ -5,7 +5,7 @@
         <title>Breakout</title>
         <meta charset="UTF-8"/>
         <style>
-            #ball {
+            img {
                 display: none;
             }
         </style>
@@ -14,6 +14,7 @@
     <body>
 
         <img id="ball" src="assets/images/ball.png"/>
+        <img id="brick" src="assets/images/brick.png"/>
         <canvas id="gameCanvas" width="800" height="600" style="border: solid 1px;"></canvas>      
         <script type="module" src="src/main.js"></script>
 
